added list model & task_controller refactor
