# app/controller/task_controller.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/0l1v3rr/todo/app/model"
+	"github.com/0l1v3rr/todo/app/util"
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 )
@@ -22,9 +23,7 @@ func GetTasksByListId(c *gin.Context) {
 	// parsing the listId parameter
 	listId, err := strconv.Atoi(c.Param("listId"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please specify a valid id.",
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: "Please specify a valid id."})
 		return
 	}
 
@@ -33,39 +32,28 @@ func GetTasksByListId(c *gin.Context) {
 	// getting the tasks from the db
 	tasks, err := model.GetTasks(listId)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		c.JSON(http.StatusInternalServerError, util.Error{Message: err.Error()})
+		return
 	}
 
 	c.JSON(http.StatusOK, tasks)
 }
 
-// @Summary      Get tasks
-// @Description  Returns the task with the specified id
+// @Summary      Get tasks by URL
+// @Description  Returns the task with the specified url
 // @Tags         Task endpoints
 // @Produce      json
-// @Param 		 id path int true "task ID"
+// @Param 		 url path string true "task URL"
 // @Success      200  {object}  model.Task
-// @Failure      400  {object}  util.Error "If the id is not valid."
 // @Failure      404  {object}  util.Error "If the task doesn't exist."
-// @Router       /tasks/{id} [get]
-func GetTaskById(c *gin.Context) {
-	// parsing the id parameter
-	id, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please specify a valid id.",
-		})
-		return
-	}
+// @Router       /tasks/{url} [get]
+func GetTaskByUrl(c *gin.Context) {
+	// getting the url from the parameter
+	url := c.Param("url")
 
-	// checking if the task exists, and getting the task from the db
-	task, exists := model.TaskExists(id)
-	if !exists {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": "Task with this ID does not exist.",
-		})
+	task, err := model.GetTaskByUrl(url)
+	if err != nil {
+		c.JSON(http.StatusNotFound, util.Error{Message: "Task with this ID does not exist."})
 		return
 	}
 
@@ -89,44 +77,35 @@ func ChangeTaskStatus(c *gin.Context) {
 	// parsing the id parameter
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please specify a valid id.",
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: "Please specify a valid id."})
 		return
 	}
 
 	// checking if the task exists
 	existingTask, exists := model.TaskExists(id)
 	if !exists {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": "Task with this ID does not exist.",
-		})
+		c.JSON(http.StatusNotFound, util.Error{Message: "Task with this ID does not exist."})
 		return
 	}
 
 	// checking if the user is logged in
 	user, err := model.GetLoggedInUser(*c)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "You are not logged in.",
-		})
+		c.JSON(http.StatusUnauthorized, util.Error{Message: "You are not logged in."})
 		return
 	}
 
 	// checking if the user has permission
 	if user.Id != existingTask.CreatedById {
-		c.JSON(http.StatusForbidden, gin.H{
-			"error": "You do not have permission to do this.",
-		})
+		c.JSON(http.StatusForbidden, util.Error{Message: "You do not have permission to do this."})
 		return
 	}
 
 	// changing the IsDone parameter
 	task, err := model.ChangeIsDone(id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		c.JSON(http.StatusInternalServerError, util.Error{Message: err.Error()})
+		return
 	}
 
 	// success
@@ -149,27 +128,21 @@ func CreateTask(c *gin.Context) {
 	var task model.Task
 
 	if err := c.ShouldBindBodyWith(&task, binding.JSON); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please provide a valid task.",
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: "Please provide a valid task."})
 		return
 	}
 
 	// validating the task
 	valid, msg := task.Validate()
 	if !valid {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"message": msg,
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: msg})
 		return
 	}
 
 	// checking if the user is logged in
 	user, err := model.GetLoggedInUser(*c)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "You are not logged in.",
-		})
+		c.JSON(http.StatusUnauthorized, util.Error{Message: "You are not logged in."})
 		return
 	}
 
@@ -182,9 +155,7 @@ func CreateTask(c *gin.Context) {
 	// creating the task
 	task, err = model.CreateTask(task)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		c.JSON(http.StatusInternalServerError, util.Error{Message: err.Error()})
 		return
 	}
 
@@ -209,35 +180,27 @@ func EditTask(c *gin.Context) {
 	// parsing the id parameter
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please specify a valid id.",
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: "Please specify a valid id."})
 		return
 	}
 
 	// checking if the task exists
 	existingTask, exists := model.TaskExists(id)
 	if !exists {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": "Task with this ID does not exist.",
-		})
+		c.JSON(http.StatusNotFound, util.Error{Message: "Task with this ID does not exist."})
 		return
 	}
 
 	// checking if the user is logged in
 	user, err := model.GetLoggedInUser(*c)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "You are not logged in.",
-		})
+		c.JSON(http.StatusUnauthorized, util.Error{Message: "You are not logged in."})
 		return
 	}
 
 	// checking if the user has permission
 	if user.Id != existingTask.CreatedById {
-		c.JSON(http.StatusForbidden, gin.H{
-			"error": "You do not have permission to do this.",
-		})
+		c.JSON(http.StatusForbidden, util.Error{Message: "You do not have permission to do this."})
 		return
 	}
 
@@ -245,18 +208,14 @@ func EditTask(c *gin.Context) {
 	var task model.Task
 
 	if err := c.ShouldBindBodyWith(&task, binding.JSON); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please provide a valid task.",
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: "Please provide a valid task."})
 		return
 	}
 
 	// validating the task
 	valid, msg := task.Validate()
 	if !valid {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"message": msg,
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: msg})
 		return
 	}
 
@@ -267,9 +226,7 @@ func EditTask(c *gin.Context) {
 	// saving the task in the db
 	saved, err := model.EditTask(task)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		c.JSON(http.StatusInternalServerError, util.Error{Message: err.Error()})
 		return
 	}
 
@@ -292,44 +249,34 @@ func DeleteTask(c *gin.Context) {
 	// parsing the id parameter
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Please specify a valid id.",
-		})
+		c.JSON(http.StatusBadRequest, util.Error{Message: "Please specify a valid id."})
 		return
 	}
 
 	// checking if the task exists
 	existingTask, exists := model.TaskExists(id)
 	if !exists {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": "Task with this ID does not exist.",
-		})
+		c.JSON(http.StatusNotFound, util.Error{Message: "Task with this ID does not exist."})
 		return
 	}
 
 	// checking if the user is logged in
 	user, err := model.GetLoggedInUser(*c)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{
-			"error": "You are not logged in.",
-		})
+		c.JSON(http.StatusUnauthorized, util.Error{Message: "You are not logged in."})
 		return
 	}
 
 	// checking if the user has permission
 	if user.Id != existingTask.CreatedById {
-		c.JSON(http.StatusForbidden, gin.H{
-			"error": "You do not have permission to do this.",
-		})
+		c.JSON(http.StatusForbidden, util.Error{Message: "You do not have permission to do this."})
 		return
 	}
 
 	// deleting the task
 	err = model.DeleteTask(id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
+		c.JSON(http.StatusInternalServerError, util.Error{Message: err.Error()})
 		return
 	}
 
