# app/model/user.go
@@ -14,8 +14,8 @@ type User struct {
 	Id        int    `json:"id" gorm:"primaryKey" example:"1"`
 	Name      string `json:"name" gorm:"not null" example:"John Doe"`
 	Email     string `json:"email" gorm:"not null;unique" example:"johndoe@gmail.com"`
-	Password  string `json:"-" gorm:"not null" example:"secret"`
-	IsEnabled bool   `json:"is_enabled" gorm:"not null" example:"true"`
+	Password  string `json:"-" gorm:"not null;column:password" example:"secret"`
+	IsEnabled bool   `json:"isEnabled" gorm:"not null;column:is_enabled" example:"true"`
 }
 
 // defining a LoginUser for the documentation
